# MovingColoredShapes

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.txt
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  GameEngine.hpp  MovingColoredShapeWithText.hpp  main.cpp
